--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,9 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.8
+  flutter_localizations:
+    sdk: flutter
+  intl: any
 
 dev_dependencies:
   flutter_test:
@@ -20,5 +23,5 @@ dev_dependencies:
   flutter_lints: ^4.0.0
 
 flutter:
-
+  generate: true
   uses-material-design: true
